<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_20_c"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_off"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnOnOff"
        android:layout_width="144dp"
        android:layout_height="140dp"
        android:layout_weight="1"
        android:text="@string/on_off"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="138dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnMode"
        android:layout_width="165dp"
        android:layout_height="131dp"
        android:layout_weight="1"
        android:text="@string/mode"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="130dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnIncrease"
        android:layout_width="151dp"
        android:layout_height="123dp"
        android:layout_weight="1"
        android:text="@string/y"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="320dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDecrease"
        android:layout_width="119dp"
        android:layout_height="119dp"
        android:layout_weight="1"
        android:text="@string/x"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="324dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
